deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: DEPLOY_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: DEPLOY_NAME
  template:
    metadata:
      labels:
        app: DEPLOY_NAME
    spec:
      containers:
        - name: consultaoferta-web
          image: IMAGE
          ports:
            - containerPort: 8080
            
        # Contenedor Envoy (sidecar)
        - name: envoy-sidecar
          image: envoyproxy/envoy:v1.31.0
          ports:
            - containerPort: 10000 # Envoy escuchará en este puerto
          args:
            - --config-path /etc/envoy/envoy.yaml
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy
              readOnly: true

      volumes:
        - name: envoy-config
          configMap:
            name: envoy-config
