service-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: consultaoferta-web-lb
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ports:
    - port: 8080
      targetPort: 10000
      protocol: TCP
      nodePort: 30140
  type: NodePort
  selector:
    app: consultaoferta-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consultaoferta-web-ing
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    #alb.ingress.kubernetes.io/healthcheck-path: /usermgmt/health-status
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    #TLS configuration
    alb.ingress.kubernetes.io/certificate-arn: CERT
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    # - http:
    #     paths:
    #     - path: /
    #       pathType: Prefix
    #       backend:
    #         service:
    #           name: consultaoferta-web-lb
    #           port:
    #             number: 8080
    #Https configuration
    - host: HOST_WEB
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: consultaoferta-web-lb
                port:
                  number: 8080
  tls:
    - hosts:
        - HOST_WEB
